--- a/restapi/src/main/resources/application.properties
+++ b/restapi/src/main/resources/application.properties
@@ -1,16 +1,12 @@
-server.port=8081
-
-spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
-
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=1910redbig
-
+spring.datasource.password=1213122
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.hibernate.ddl-auto=validate
-
-spring.liquibase.enabled = true
-spring.jpa.show-sql= false
+spring.liquibase.enabled=true
+spring.jpa.show-sql=false
+server.error.include-message=always
 
